fix: flex-wrap style.css

--- a/style.css
+++ b/style.css
@@ -125,5 +125,5 @@ body{
 
 .row{
     display: flex;
-    flex-flow: wrap-reverse;
+    flex-flow: wrap;
 }
